# goit-web-hw-12

./: Dockerfile  docker-compose.yml  env.py  main.bat  main.py  main.sh  pyproject.toml  requirements.txt  schemas.py
database/: db.py  models.py
repository/: contacts.py
routes/: auth.py  contacts.py
services/: auth.py
